# Proyecto-Algoritmos

./: CMakeLists.txt  client_bst.c  client_bst.h  delivery_queue.c  delivery_queue.h  files.c  files.h  io_utils.h  main.c  package_avl.c  package_avl.h  package_list.c  package_list.h  reports.c  reports.h  returns_stack.c  returns_stack.h  routes_graph.c  routes_graph.h
